--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.28MB/s(Youtube:不良林), server: 38.68.135.18, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-1.41MB/s(Youtube:不良林), server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-2.88MB/s(Youtube:不良林), server: 116.129.254.177, port: 65035, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 波兰-1.25MB/s(Youtube:不良林), server: 217.30.10.67, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇯🇵 日本-14.92MB/s(Youtube:不良林), server: jp-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: jp-03.licom.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-12.27MB/s(Youtube:不良林), server: 111.45.22.136, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 波兰-1.18MB/s(Youtube:不良林), server: 217.30.10.67, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
+  - {name: 🇨🇳 中国-8.12MB/s(Youtube:不良林), server: cn03.downloadmovie.cn, port: 65027, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn03.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-3.25MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.51MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 波兰-1.19MB/s(Youtube:不良林), server: 217.30.10.67, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
   - {name: 🇷🇺 俄罗斯联邦-3.62MB/s(Youtube:不良林), server: 141.98.168.251, port: 443, type: trojan, password: LiX1tV, skip-cert-verify: true}
   - {name: 🇹🇭 泰国-300.1KB/s(Youtube:不良林), server: 119.59.116.248, port: 17159, type: trojan, password: PHnvNV7HGp, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
-      - 波兰-1.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-14.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.27MB/s(Youtube:不良林)
+      - 波兰-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
       - 波兰-1.19MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.62MB/s(Youtube:不良林)
       - 🇹🇭 泰国-300.1KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
-      - 波兰-1.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-14.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.27MB/s(Youtube:不良林)
+      - 波兰-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
       - 波兰-1.19MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.62MB/s(Youtube:不良林)
       - 🇹🇭 泰国-300.1KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
-      - 波兰-1.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-14.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.27MB/s(Youtube:不良林)
+      - 波兰-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
       - 波兰-1.19MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.62MB/s(Youtube:不良林)
       - 🇹🇭 泰国-300.1KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
-      - 波兰-1.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-14.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.27MB/s(Youtube:不良林)
+      - 波兰-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
       - 波兰-1.19MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.62MB/s(Youtube:不良林)
       - 🇹🇭 泰国-300.1KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
-      - 波兰-1.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-14.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.27MB/s(Youtube:不良林)
+      - 波兰-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
       - 波兰-1.19MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.62MB/s(Youtube:不良林)
       - 🇹🇭 泰国-300.1KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
-      - 波兰-1.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-14.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.27MB/s(Youtube:不良林)
+      - 波兰-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
       - 波兰-1.19MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.62MB/s(Youtube:不良林)
       - 🇹🇭 泰国-300.1KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
-      - 波兰-1.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-14.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.27MB/s(Youtube:不良林)
+      - 波兰-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
       - 波兰-1.19MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.62MB/s(Youtube:不良林)
       - 🇹🇭 泰国-300.1KB/s(Youtube:不良林)
