--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-3.57MB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇭🇰 香港-1.82MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.65MB/s(Youtube:不良林), server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-541.0KB/s(Youtube:不良林), server: 36.134.154.119, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
+  - {name: 🇨🇳 中国-11.76MB/s(Youtube:不良林), server: 116.129.254.177, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇨🇳 中国-3.38MB/s(Youtube:不良林), server: 116.129.254.177, port: 65048, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.86MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
   - {name: 波兰-1.19MB/s(Youtube:不良林), server: 217.30.10.67, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
   - {name: 🇷🇺 俄罗斯联邦-3.62MB/s(Youtube:不良林), server: 141.98.168.251, port: 443, type: trojan, password: LiX1tV, skip-cert-verify: true}
   - {name: 🇹🇭 泰国-300.1KB/s(Youtube:不良林), server: 119.59.116.248, port: 17159, type: trojan, password: PHnvNV7HGp, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.85MB/s(Youtube:不良林), server: 38.68.135.18, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-2.57MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-2.83MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-541.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.76MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.86MB/s(Youtube:不良林)
       - 波兰-1.19MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.62MB/s(Youtube:不良林)
       - 🇹🇭 泰国-300.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-541.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.76MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.86MB/s(Youtube:不良林)
       - 波兰-1.19MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.62MB/s(Youtube:不良林)
       - 🇹🇭 泰国-300.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-541.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.76MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.86MB/s(Youtube:不良林)
       - 波兰-1.19MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.62MB/s(Youtube:不良林)
       - 🇹🇭 泰国-300.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-541.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.76MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.86MB/s(Youtube:不良林)
       - 波兰-1.19MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.62MB/s(Youtube:不良林)
       - 🇹🇭 泰国-300.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-541.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.76MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.86MB/s(Youtube:不良林)
       - 波兰-1.19MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.62MB/s(Youtube:不良林)
       - 🇹🇭 泰国-300.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-541.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.76MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.86MB/s(Youtube:不良林)
       - 波兰-1.19MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.62MB/s(Youtube:不良林)
       - 🇹🇭 泰国-300.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-541.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.76MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.86MB/s(Youtube:不良林)
       - 波兰-1.19MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.62MB/s(Youtube:不良林)
       - 🇹🇭 泰国-300.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
